--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "url": "https://github.com/ibmruntimes/chcp"
   },
   "scripts": {
+    "install": "node-pre-gyp install --fallback-to-build",
+    "build": "node-pre-gyp rebuild --build-from-source && node-pre-gyp package",
     "lint": "eslint . && eclint check src test *.md *.js",
     "test": "tap test/*.js"
   },
@@ -32,6 +34,18 @@
     "eslint-config-strongloop": "^2.1.0",
     "tap": "^10.7.3"
   },
-  "dependencies": {},
-  "os": ["win32"]
+  "dependencies": {
+    "nan": "^2.17.0",
+    "node-pre-gyp": "^0.17.0"
+  },
+  "binary": {
+    "module_name": "chcp",
+    "module_path": "./build/Release/binding/{node_abi}-{platform}-{arch}",
+    "package_name": "{node_abi}-{platform}-{arch}.tar.gz",
+    "host": "https://github.com/matherm-aboehm/chcp/releases/download/",
+    "remote_path": "v{version}"
+  },
+  "os": [
+    "win32"
+  ]
 }
