--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "chcp",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "main": "index.js",
+  "types": "index.d.ts",
   "description": "A JS binding for couple of windows abstractions.",
   "author": "Gireesh Punathil <gpunathi@in.ibm.com>",
   "contributors": [],
@@ -14,7 +15,7 @@
     "install": "node-pre-gyp install --fallback-to-build",
     "build": "node-pre-gyp rebuild --build-from-source && node-pre-gyp package",
     "lint": "eslint . && eclint check src test *.md *.js",
-    "test": "tap test/*.js"
+    "test": "tsd-check && tap test/*.js"
   },
   "engines": {
     "node": ">= 4.0.0"
@@ -24,15 +25,19 @@
     "CONTRIBUTING.md",
     "README.md",
     "index.js",
+    "index.d.ts",
     "src/chcp.cc",
     "binding.gyp",
     "test/"
   ],
   "devDependencies": {
+    "@types/node": "^6",
+    "@types/tap": "^14.10.0",
     "eclint": "^2.8.1",
     "eslint": "^6.6.0",
     "eslint-config-strongloop": "^2.1.0",
-    "tap": "^10.7.3"
+    "tap": "^10.7.3",
+    "tsd-check": "^0.5.0"
   },
   "dependencies": {
     "nan": "^2.17.0",
