--- a/appveyor.yml
+++ b/appveyor.yml
@@ -32,7 +32,7 @@ install:
 
 # to run your custom scripts instead of automatic tests
 test_script:
-  # npm run lint
+  - npm run lint
   - npm test
 
 # to run your custom scripts instead of provider deployments
